Added function to get all players stats

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,13 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a64b4315-2d41-45c5-9d54-1121084ef98e",
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.fantasyhelper import stats\n",
-    "import pandas as pd\n",
     "import jupyter_black\n",
     "\n",
     "jupyter_black.load()"
@@ -27,247 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "43e0e9d3-71bb-4948-af2d-75b5e0210a32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_stats = stats.get_player_stats()\n",
+    "df_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "03eefc9c-a45e-4140-aca7-3e599efb6035",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>abbr</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>franchise_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>Anaheim Ducks</td>\n",
-       "      <td>ANA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Boston Bruins</td>\n",
-       "      <td>BOS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Buffalo Sabres</td>\n",
-       "      <td>BUF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Calgary Flames</td>\n",
-       "      <td>CGY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Carolina Hurricanes</td>\n",
-       "      <td>CAR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Chicago Blackhawks</td>\n",
-       "      <td>CHI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Colorado Avalanche</td>\n",
-       "      <td>COL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>Columbus Blue Jackets</td>\n",
-       "      <td>CBJ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Dallas Stars</td>\n",
-       "      <td>DAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Detroit Red Wings</td>\n",
-       "      <td>DET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Edmonton Oilers</td>\n",
-       "      <td>EDM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>Florida Panthers</td>\n",
-       "      <td>FLA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Los Angeles Kings</td>\n",
-       "      <td>LAK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>Minnesota Wild</td>\n",
-       "      <td>MIN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Montréal Canadiens</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>Nashville Predators</td>\n",
-       "      <td>NSH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>New Jersey Devils</td>\n",
-       "      <td>NJD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>New York Islanders</td>\n",
-       "      <td>NYI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>New York Rangers</td>\n",
-       "      <td>NYR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Ottawa Senators</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Philadelphia Flyers</td>\n",
-       "      <td>PHI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Pittsburgh Penguins</td>\n",
-       "      <td>PIT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>San Jose Sharks</td>\n",
-       "      <td>SJS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Seattle Kraken</td>\n",
-       "      <td>SEA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>St. Louis Blues</td>\n",
-       "      <td>STL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>Tampa Bay Lightning</td>\n",
-       "      <td>TBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Toronto Maple Leafs</td>\n",
-       "      <td>TOR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>Utah Hockey Club</td>\n",
-       "      <td>UTA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Vancouver Canucks</td>\n",
-       "      <td>VAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>Vegas Golden Knights</td>\n",
-       "      <td>VGK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Washington Capitals</td>\n",
-       "      <td>WSH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Winnipeg Jets</td>\n",
-       "      <td>WPG</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               name abbr\n",
-       "franchise_id                            \n",
-       "32                    Anaheim Ducks  ANA\n",
-       "6                     Boston Bruins  BOS\n",
-       "19                   Buffalo Sabres  BUF\n",
-       "21                   Calgary Flames  CGY\n",
-       "26              Carolina Hurricanes  CAR\n",
-       "11               Chicago Blackhawks  CHI\n",
-       "27               Colorado Avalanche  COL\n",
-       "36            Columbus Blue Jackets  CBJ\n",
-       "15                     Dallas Stars  DAL\n",
-       "12                Detroit Red Wings  DET\n",
-       "25                  Edmonton Oilers  EDM\n",
-       "33                 Florida Panthers  FLA\n",
-       "14                Los Angeles Kings  LAK\n",
-       "37                   Minnesota Wild  MIN\n",
-       "1                Montréal Canadiens  MTL\n",
-       "34              Nashville Predators  NSH\n",
-       "23                New Jersey Devils  NJD\n",
-       "22               New York Islanders  NYI\n",
-       "10                 New York Rangers  NYR\n",
-       "30                  Ottawa Senators  OTT\n",
-       "16              Philadelphia Flyers  PHI\n",
-       "17              Pittsburgh Penguins  PIT\n",
-       "29                  San Jose Sharks  SJS\n",
-       "39                   Seattle Kraken  SEA\n",
-       "18                  St. Louis Blues  STL\n",
-       "31              Tampa Bay Lightning  TBL\n",
-       "5               Toronto Maple Leafs  TOR\n",
-       "40                 Utah Hockey Club  UTA\n",
-       "20                Vancouver Canucks  VAN\n",
-       "38             Vegas Golden Knights  VGK\n",
-       "24              Washington Capitals  WSH\n",
-       "35                    Winnipeg Jets  WPG"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "teams_df = stats.get_teams()\n",
     "teams_df"
@@ -275,243 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "679a82fd-f44c-4403-802d-b440d08cd98a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>firstName</th>\n",
-       "      <th>lastName</th>\n",
-       "      <th>positionCode</th>\n",
-       "      <th>team</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8476981</th>\n",
-       "      <td>Josh</td>\n",
-       "      <td>Anderson</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8476469</th>\n",
-       "      <td>Joel</td>\n",
-       "      <td>Armia</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8481540</th>\n",
-       "      <td>Cole</td>\n",
-       "      <td>Caufield</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8481523</th>\n",
-       "      <td>Kirby</td>\n",
-       "      <td>Dach</td>\n",
-       "      <td>C</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8484984</th>\n",
-       "      <td>Ivan</td>\n",
-       "      <td>Demidov</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8477989</th>\n",
-       "      <td>Christian</td>\n",
-       "      <td>Dvorak</td>\n",
-       "      <td>C</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8478133</th>\n",
-       "      <td>Jake</td>\n",
-       "      <td>Evans</td>\n",
-       "      <td>C</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8475848</th>\n",
-       "      <td>Brendan</td>\n",
-       "      <td>Gallagher</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8479339</th>\n",
-       "      <td>Patrik</td>\n",
-       "      <td>Laine</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8481618</th>\n",
-       "      <td>Alex</td>\n",
-       "      <td>Newhook</td>\n",
-       "      <td>C</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8479543</th>\n",
-       "      <td>Michael</td>\n",
-       "      <td>Pezzetta</td>\n",
-       "      <td>L</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8483515</th>\n",
-       "      <td>Juraj</td>\n",
-       "      <td>Slafkovský</td>\n",
-       "      <td>L</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8480018</th>\n",
-       "      <td>Nick</td>\n",
-       "      <td>Suzuki</td>\n",
-       "      <td>C</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8478851</th>\n",
-       "      <td>Alexandre</td>\n",
-       "      <td>Carrier</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8480865</th>\n",
-       "      <td>Noah</td>\n",
-       "      <td>Dobson</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8482087</th>\n",
-       "      <td>Kaiden</td>\n",
-       "      <td>Guhle</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8483457</th>\n",
-       "      <td>Lane</td>\n",
-       "      <td>Hutson</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8476875</th>\n",
-       "      <td>Mike</td>\n",
-       "      <td>Matheson</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8475233</th>\n",
-       "      <td>David</td>\n",
-       "      <td>Savard</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8481593</th>\n",
-       "      <td>Jayden</td>\n",
-       "      <td>Struble</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8482964</th>\n",
-       "      <td>Arber</td>\n",
-       "      <td>Xhekaj</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8482487</th>\n",
-       "      <td>Jakub</td>\n",
-       "      <td>Dobes</td>\n",
-       "      <td>G</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8478470</th>\n",
-       "      <td>Sam</td>\n",
-       "      <td>Montembeault</td>\n",
-       "      <td>G</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         firstName      lastName positionCode team\n",
-       "id                                                \n",
-       "8476981       Josh      Anderson            R  MTL\n",
-       "8476469       Joel         Armia            R  MTL\n",
-       "8481540       Cole      Caufield            R  MTL\n",
-       "8481523      Kirby          Dach            C  MTL\n",
-       "8484984       Ivan       Demidov            R  MTL\n",
-       "8477989  Christian        Dvorak            C  MTL\n",
-       "8478133       Jake         Evans            C  MTL\n",
-       "8475848    Brendan     Gallagher            R  MTL\n",
-       "8479339     Patrik         Laine            R  MTL\n",
-       "8481618       Alex       Newhook            C  MTL\n",
-       "8479543    Michael      Pezzetta            L  MTL\n",
-       "8483515      Juraj    Slafkovský            L  MTL\n",
-       "8480018       Nick        Suzuki            C  MTL\n",
-       "8478851  Alexandre       Carrier            D  MTL\n",
-       "8480865       Noah        Dobson            D  MTL\n",
-       "8482087     Kaiden         Guhle            D  MTL\n",
-       "8483457       Lane        Hutson            D  MTL\n",
-       "8476875       Mike      Matheson            D  MTL\n",
-       "8475233      David        Savard            D  MTL\n",
-       "8481593     Jayden       Struble            D  MTL\n",
-       "8482964      Arber        Xhekaj            D  MTL\n",
-       "8482487      Jakub         Dobes            G  MTL\n",
-       "8478470        Sam  Montembeault            G  MTL"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "habs_df = stats.get_roster(\"MTL\")\n",
     "habs_df"
@@ -533,8 +73,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
