--- a/main.ipynb
+++ b/main.ipynb
@@ -27,9 +27,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43e0e9d3-71bb-4948-af2d-75b5e0210a32",
+   "id": "a7e5bfdf-afdb-4c1c-9f06-842531e050b8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/orad/Documents/ProgProjects/FantasyHelper/src/fantasyhelper/stats.py:75: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  df = pd.concat(data_list, ignore_index=True)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -51,19 +59,31 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>LastName</th>\n",
        "      <th>FullName</th>\n",
        "      <th>team</th>\n",
+       "      <th>FullTeam</th>\n",
        "      <th>position</th>\n",
        "      <th>GP</th>\n",
        "      <th>G</th>\n",
        "      <th>A</th>\n",
        "      <th>PPP</th>\n",
        "      <th>SHP</th>\n",
-       "      <th>GWP</th>\n",
+       "      <th>GWG</th>\n",
        "      <th>SOG</th>\n",
+       "      <th>+/-</th>\n",
+       "      <th>PIM</th>\n",
+       "      <th>FW</th>\n",
+       "      <th>HIT</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>playerId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -79,68 +99,98 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>8477492</th>\n",
+       "      <td>MacKinnon</td>\n",
        "      <td>Nathan MacKinnon</td>\n",
        "      <td>COL</td>\n",
+       "      <td>Colorado Avalanche</td>\n",
        "      <td>C</td>\n",
-       "      <td>79</td>\n",
-       "      <td>32</td>\n",
-       "      <td>84</td>\n",
-       "      <td>38</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>320</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>756.0</td>\n",
+       "      <td>38.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8477934</th>\n",
+       "      <td>Draisaitl</td>\n",
        "      <td>Leon Draisaitl</td>\n",
        "      <td>EDM</td>\n",
+       "      <td>Edmonton Oilers</td>\n",
        "      <td>C</td>\n",
-       "      <td>71</td>\n",
-       "      <td>52</td>\n",
-       "      <td>54</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>240</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>650.0</td>\n",
+       "      <td>23.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8477956</th>\n",
+       "      <td>Pastrnak</td>\n",
        "      <td>David Pastrnak</td>\n",
        "      <td>BOS</td>\n",
+       "      <td>Boston Bruins</td>\n",
        "      <td>R</td>\n",
-       "      <td>82</td>\n",
-       "      <td>43</td>\n",
-       "      <td>63</td>\n",
-       "      <td>23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>319</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>319.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>58.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8478483</th>\n",
+       "      <td>Marner</td>\n",
        "      <td>Mitchell Marner</td>\n",
-       "      <td>TOR</td>\n",
+       "      <td>VGK</td>\n",
+       "      <td>Vegas Golden Knights</td>\n",
        "      <td>R</td>\n",
-       "      <td>81</td>\n",
-       "      <td>27</td>\n",
-       "      <td>75</td>\n",
-       "      <td>33</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>173</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>49.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8478402</th>\n",
+       "      <td>McDavid</td>\n",
        "      <td>Connor McDavid</td>\n",
        "      <td>EDM</td>\n",
+       "      <td>Edmonton Oilers</td>\n",
        "      <td>C</td>\n",
-       "      <td>67</td>\n",
-       "      <td>26</td>\n",
-       "      <td>74</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>196</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>370.0</td>\n",
+       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -154,93 +204,143 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8478408</th>\n",
-       "      <td>Travis Dermott</td>\n",
-       "      <td>MIN</td>\n",
+       "      <th>8481600</th>\n",
+       "      <td>Bjornfot</td>\n",
+       "      <td>Tobias Bjornfot</td>\n",
+       "      <td>FLA</td>\n",
+       "      <td>Florida Panthers</td>\n",
        "      <td>D</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8477073</th>\n",
+       "      <td>MacDermid</td>\n",
        "      <td>Kurtis MacDermid</td>\n",
        "      <td>NJD</td>\n",
+       "      <td>New Jersey Devils</td>\n",
        "      <td>L</td>\n",
-       "      <td>23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8479543</th>\n",
+       "      <td>Pezzetta</td>\n",
        "      <td>Michael Pezzetta</td>\n",
-       "      <td>MTL</td>\n",
+       "      <td>TOR</td>\n",
+       "      <td>Toronto Maple Leafs</td>\n",
        "      <td>L</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>73.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8480259</th>\n",
+       "      <td>Jones</td>\n",
        "      <td>Ben Jones</td>\n",
        "      <td>MIN</td>\n",
+       "      <td>Minnesota Wild</td>\n",
        "      <td>C</td>\n",
-       "      <td>26</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>51.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8478454</th>\n",
+       "      <td>Juulsen</td>\n",
        "      <td>Noah Juulsen</td>\n",
-       "      <td>VAN</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>Philadelphia Flyers</td>\n",
        "      <td>D</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>-12.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>101.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>919 rows × 10 columns</p>\n",
+       "<p>842 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  FullName team position  GP   G   A  PPP  SHP  GWP  SOG\n",
-       "playerId                                                                \n",
-       "8477492   Nathan MacKinnon  COL        C  79  32  84   38    0    5  320\n",
-       "8477934     Leon Draisaitl  EDM        C  71  52  54   33    0   11  240\n",
-       "8477956     David Pastrnak  BOS        R  82  43  63   23    0    4  319\n",
-       "8478483    Mitchell Marner  TOR        R  81  27  75   33    2    7  173\n",
-       "8478402     Connor McDavid  EDM        C  67  26  74   31    0    3  196\n",
-       "...                    ...  ...      ...  ..  ..  ..  ...  ...  ...  ...\n",
-       "8478408     Travis Dermott  MIN        D  19   0   0    0    0    0    8\n",
-       "8477073   Kurtis MacDermid  NJD        L  23   0   0    0    0    0    7\n",
-       "8479543   Michael Pezzetta  MTL        L  25   0   0    0    0    0   14\n",
-       "8480259          Ben Jones  MIN        C  26   0   0    0    0    0   24\n",
-       "8478454       Noah Juulsen  VAN        D  35   0   0    0    0    0   26\n",
+       "           LastName          FullName team              FullTeam position  \\\n",
+       "playerId                                                                    \n",
+       "8477492   MacKinnon  Nathan MacKinnon  COL    Colorado Avalanche        C   \n",
+       "8477934   Draisaitl    Leon Draisaitl  EDM       Edmonton Oilers        C   \n",
+       "8477956    Pastrnak    David Pastrnak  BOS         Boston Bruins        R   \n",
+       "8478483      Marner   Mitchell Marner  VGK  Vegas Golden Knights        R   \n",
+       "8478402     McDavid    Connor McDavid  EDM       Edmonton Oilers        C   \n",
+       "...             ...               ...  ...                   ...      ...   \n",
+       "8481600    Bjornfot   Tobias Bjornfot  FLA      Florida Panthers        D   \n",
+       "8477073   MacDermid  Kurtis MacDermid  NJD     New Jersey Devils        L   \n",
+       "8479543    Pezzetta  Michael Pezzetta  TOR   Toronto Maple Leafs        L   \n",
+       "8480259       Jones         Ben Jones  MIN        Minnesota Wild        C   \n",
+       "8478454     Juulsen      Noah Juulsen  PHI   Philadelphia Flyers        D   \n",
        "\n",
-       "[919 rows x 10 columns]"
+       "            GP     G     A   PPP  SHP   GWG    SOG   +/-   PIM     FW    HIT  \n",
+       "playerId                                                                      \n",
+       "8477492   79.0  32.0  84.0  38.0  0.0   5.0  320.0  25.0  41.0  756.0   38.0  \n",
+       "8477934   71.0  52.0  54.0  33.0  0.0  11.0  240.0  32.0  34.0  650.0   23.0  \n",
+       "8477956   82.0  43.0  63.0  23.0  0.0   4.0  319.0   0.0  42.0    3.0   58.0  \n",
+       "8478483   81.0  27.0  75.0  33.0  2.0   7.0  173.0  18.0  14.0   10.0   49.0  \n",
+       "8478402   67.0  26.0  74.0  31.0  0.0   3.0  196.0  20.0  37.0  370.0   40.0  \n",
+       "...        ...   ...   ...   ...  ...   ...    ...   ...   ...    ...    ...  \n",
+       "8481600   14.0   0.0   0.0   0.0  0.0   0.0   10.0  -3.0   2.0    0.0   13.0  \n",
+       "8477073   23.0   0.0   0.0   0.0  0.0   0.0    7.0  -5.0  23.0    0.0   40.0  \n",
+       "8479543   25.0   0.0   0.0   0.0  0.0   0.0   14.0  -2.0  24.0    2.0   73.0  \n",
+       "8480259   26.0   0.0   0.0   0.0  0.0   0.0   24.0  -3.0  10.0   12.0   51.0  \n",
+       "8478454   35.0   0.0   0.0   0.0  0.0   0.0   26.0 -12.0  21.0    0.0  101.0  \n",
+       "\n",
+       "[842 rows x 16 columns]"
       ]
      },
      "execution_count": 2,
@@ -1180,6 +1280,14 @@
     "week_df = stats.get_week(\"2025-01-20\")\n",
     "week_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbb62020-ed42-45d9-88eb-5220205d367b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
