Added function to save data locally, and updated to python 3.13.

--- a/main.ipynb
+++ b/main.ipynb
@@ -27,17 +27,51 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a7e5bfdf-afdb-4c1c-9f06-842531e050b8",
+   "id": "44e7002a-e622-4b26-a439-bf13eceea7bb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching rosters data...\n",
+      "Fetching schedule data...\n",
+      "Fetching stats...\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/orad/Documents/ProgProjects/FantasyHelper/src/fantasyhelper/stats.py:75: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/Users/orad/Documents/ProgProjects/FantasyHelper/src/fantasyhelper/stats.py:86: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  df = pd.concat(data_list, ignore_index=True)\n"
      ]
     },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving to HDF5...\n",
+      "Update complete.\n",
+      "Loading data from HDF5...\n",
+      "Loaded: df_stats, df_teams, df_week\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    data = stats.load_data(\"nhl_data.h5\")\n",
+    "except FileNotFoundError:\n",
+    "    stats.update_data(\"nhl_data.h5\", date=\"2025-01-20\")\n",
+    "    data = stats.load_data(\"nhl_data.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a7e5bfdf-afdb-4c1c-9f06-842531e050b8",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -343,19 +377,19 @@
        "[842 rows x 16 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_stats = stats.get_player_stats()\n",
+    "df_stats = data[\"df_stats\"]\n",
     "df_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "03eefc9c-a45e-4140-aca7-3e599efb6035",
    "metadata": {},
    "outputs": [
@@ -591,19 +625,19 @@
        "35                    Winnipeg Jets  WPG"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "teams_df = stats.get_teams()\n",
-    "teams_df"
+    "df_teams = data[\"df_teams\"]\n",
+    "df_teams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "679a82fd-f44c-4403-802d-b440d08cd98a",
    "metadata": {},
    "outputs": [
@@ -835,19 +869,19 @@
        "8478470        Sam  Montembeault            G  MTL"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "habs_df = stats.get_roster(\"MTL\")\n",
-    "habs_df"
+    "df_habs = stats.fetch_roster(\"MTL\")\n",
+    "df_habs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a5d78d6f-49f8-473b-b946-a86f408997e5",
    "metadata": {},
    "outputs": [
@@ -1271,20 +1305,20 @@
        "2024020793  2025-01-27T01:00:00Z      VGK      FLA"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "week_df = stats.get_week(\"2025-01-20\")\n",
-    "week_df"
+    "df_week = data[\"df_week\"]\n",
+    "df_week"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb62020-ed42-45d9-88eb-5220205d367b",
+   "id": "8ea7d563-aa22-4c8e-a8ce-716cf98e2a3d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1305,8 +1339,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
