Download goalie stats

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Slafternoon Delight\n",
-    "## Fantasy helper \n",
+    "## Fantasy helper\n",
     "\n",
     "We can use this sheet to update our player stats and help inform our roster moves."
    ]
@@ -20,6 +20,11 @@
    "source": [
     "from src.fantasyhelper import stats\n",
     "import jupyter_black\n",
+    "from nhlpy.nhl_client import NHLClient\n",
+    "\n",
+    "\n",
+    "client = NHLClient()\n",
+    "\n",
     "\n",
     "jupyter_black.load()"
    ]
@@ -34,27 +39,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching rosters data...\n",
-      "Fetching schedule data...\n",
-      "Fetching stats...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/orad/Documents/ProgProjects/FantasyHelper/src/fantasyhelper/stats.py:86: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  df = pd.concat(data_list, ignore_index=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving to HDF5...\n",
-      "Update complete.\n",
       "Loading data from HDF5...\n",
-      "Loaded: df_stats, df_teams, df_week\n"
+      "Loaded: df_goalies, df_skaters, df_teams, df_week\n"
      ]
     }
    ],
@@ -342,7 +328,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>842 rows × 16 columns</p>\n",
+       "<p>845 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -374,7 +360,7 @@
        "8480259   26.0   0.0   0.0   0.0  0.0   0.0   24.0  -3.0  10.0   12.0   51.0  \n",
        "8478454   35.0   0.0   0.0   0.0  0.0   0.0   26.0 -12.0  21.0    0.0  101.0  \n",
        "\n",
-       "[842 rows x 16 columns]"
+       "[845 rows x 16 columns]"
       ]
      },
      "execution_count": 3,
@@ -383,8 +369,8 @@
     }
    ],
    "source": [
-    "df_stats = data[\"df_stats\"]\n",
-    "df_stats"
+    "df_skaters = data[\"df_skaters\"]\n",
+    "df_skaters"
    ]
   },
   {
@@ -1317,11 +1303,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8ea7d563-aa22-4c8e-a8ce-716cf98e2a3d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LastName</th>\n",
+       "      <th>FullName</th>\n",
+       "      <th>team</th>\n",
+       "      <th>position</th>\n",
+       "      <th>GP</th>\n",
+       "      <th>W</th>\n",
+       "      <th>GAA</th>\n",
+       "      <th>SV%</th>\n",
+       "      <th>SHO</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>playerId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8476883</th>\n",
+       "      <td>Vasilevskiy</td>\n",
+       "      <td>Andrei Vasilevskiy</td>\n",
+       "      <td>TBL</td>\n",
+       "      <td>G</td>\n",
+       "      <td>63</td>\n",
+       "      <td>38</td>\n",
+       "      <td>2.18002</td>\n",
+       "      <td>0.92132</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8479979</th>\n",
+       "      <td>Oettinger</td>\n",
+       "      <td>Jake Oettinger</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>G</td>\n",
+       "      <td>58</td>\n",
+       "      <td>36</td>\n",
+       "      <td>2.58645</td>\n",
+       "      <td>0.90875</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8475683</th>\n",
+       "      <td>Bobrovsky</td>\n",
+       "      <td>Sergei Bobrovsky</td>\n",
+       "      <td>FLA</td>\n",
+       "      <td>G</td>\n",
+       "      <td>54</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2.43751</td>\n",
+       "      <td>0.90559</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8478499</th>\n",
+       "      <td>Hill</td>\n",
+       "      <td>Adin Hill</td>\n",
+       "      <td>VGK</td>\n",
+       "      <td>G</td>\n",
+       "      <td>50</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2.46920</td>\n",
+       "      <td>0.90641</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8480313</th>\n",
+       "      <td>Thompson</td>\n",
+       "      <td>Logan Thompson</td>\n",
+       "      <td>WSH</td>\n",
+       "      <td>G</td>\n",
+       "      <td>43</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2.48506</td>\n",
+       "      <td>0.91040</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8480885</th>\n",
+       "      <td>Rodrigue</td>\n",
+       "      <td>Olivier Rodrigue</td>\n",
+       "      <td>EDM</td>\n",
+       "      <td>G</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.10010</td>\n",
+       "      <td>0.86206</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8481529</th>\n",
+       "      <td>Miner</td>\n",
+       "      <td>Trent Miner</td>\n",
+       "      <td>COL</td>\n",
+       "      <td>G</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.61913</td>\n",
+       "      <td>0.87878</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8482123</th>\n",
+       "      <td>Commesso</td>\n",
+       "      <td>Drew Commesso</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>G</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.36370</td>\n",
+       "      <td>0.84615</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8482661</th>\n",
+       "      <td>Wallstedt</td>\n",
+       "      <td>Jesper Wallstedt</td>\n",
+       "      <td>MIN</td>\n",
+       "      <td>G</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.08742</td>\n",
+       "      <td>0.84313</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8484312</th>\n",
+       "      <td>Romanov</td>\n",
+       "      <td>Georgi Romanov</td>\n",
+       "      <td>SJS</td>\n",
+       "      <td>G</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.88551</td>\n",
+       "      <td>0.87671</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>102 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             LastName            FullName team position  GP   W      GAA  \\\n",
+       "playerId                                                                   \n",
+       "8476883   Vasilevskiy  Andrei Vasilevskiy  TBL        G  63  38  2.18002   \n",
+       "8479979     Oettinger      Jake Oettinger  DAL        G  58  36  2.58645   \n",
+       "8475683     Bobrovsky    Sergei Bobrovsky  FLA        G  54  33  2.43751   \n",
+       "8478499          Hill           Adin Hill  VGK        G  50  32  2.46920   \n",
+       "8480313      Thompson      Logan Thompson  WSH        G  43  31  2.48506   \n",
+       "...               ...                 ...  ...      ...  ..  ..      ...   \n",
+       "8480885      Rodrigue    Olivier Rodrigue  EDM        G   2   0  3.10010   \n",
+       "8481529         Miner         Trent Miner  COL        G   2   0  2.61913   \n",
+       "8482123      Commesso       Drew Commesso  CHI        G   2   0  3.36370   \n",
+       "8482661     Wallstedt    Jesper Wallstedt  MIN        G   2   0  4.08742   \n",
+       "8484312       Romanov      Georgi Romanov  SJS        G   8   0  3.88551   \n",
+       "\n",
+       "              SV%  SHO  \n",
+       "playerId                \n",
+       "8476883   0.92132    6  \n",
+       "8479979   0.90875    2  \n",
+       "8475683   0.90559    5  \n",
+       "8478499   0.90641    4  \n",
+       "8480313   0.91040    2  \n",
+       "...           ...  ...  \n",
+       "8480885   0.86206    0  \n",
+       "8481529   0.87878    0  \n",
+       "8482123   0.84615    0  \n",
+       "8482661   0.84313    0  \n",
+       "8484312   0.87671    0  \n",
+       "\n",
+       "[102 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_goalies = data[\"df_goalies\"]\n",
+    "df_goalies"
+   ]
   }
  ],
  "metadata": {
@@ -1339,7 +1547,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
