--- a/main.ipynb
+++ b/main.ipynb
@@ -22,9 +22,7 @@
     "import jupyter_black\n",
     "from nhlpy.nhl_client import NHLClient\n",
     "\n",
-    "\n",
     "client = NHLClient()\n",
-    "\n",
     "\n",
     "jupyter_black.load()"
    ]
@@ -39,8 +37,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Fetching NHL roster data...\n",
+      "Fetching NHL schedule data...\n",
+      "Fetching NHL skater stats...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/orad/Documents/ProgProjects/FantasyHelper/src/fantasyhelper/nhl_stats.py:146: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  df = pd.concat(data_list, ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching NHL goalie stats...\n",
+      "Fetching fantasy rosters...\n",
+      "Saving to HDF5...\n",
+      "Update complete.\n",
       "Loading data from HDF5...\n",
-      "Loaded: df_goalies, df_skaters, df_teams, df_week\n"
+      "Loaded: df_fantasy_rosters, df_goalies, df_skaters, df_teams, df_week\n"
      ]
     }
    ],
@@ -624,250 +643,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "679a82fd-f44c-4403-802d-b440d08cd98a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>firstName</th>\n",
-       "      <th>lastName</th>\n",
-       "      <th>positionCode</th>\n",
-       "      <th>team</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8476981</th>\n",
-       "      <td>Josh</td>\n",
-       "      <td>Anderson</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8476469</th>\n",
-       "      <td>Joel</td>\n",
-       "      <td>Armia</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8481540</th>\n",
-       "      <td>Cole</td>\n",
-       "      <td>Caufield</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8481523</th>\n",
-       "      <td>Kirby</td>\n",
-       "      <td>Dach</td>\n",
-       "      <td>C</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8484984</th>\n",
-       "      <td>Ivan</td>\n",
-       "      <td>Demidov</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8477989</th>\n",
-       "      <td>Christian</td>\n",
-       "      <td>Dvorak</td>\n",
-       "      <td>C</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8478133</th>\n",
-       "      <td>Jake</td>\n",
-       "      <td>Evans</td>\n",
-       "      <td>C</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8475848</th>\n",
-       "      <td>Brendan</td>\n",
-       "      <td>Gallagher</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8479339</th>\n",
-       "      <td>Patrik</td>\n",
-       "      <td>Laine</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8481618</th>\n",
-       "      <td>Alex</td>\n",
-       "      <td>Newhook</td>\n",
-       "      <td>C</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8479543</th>\n",
-       "      <td>Michael</td>\n",
-       "      <td>Pezzetta</td>\n",
-       "      <td>L</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8483515</th>\n",
-       "      <td>Juraj</td>\n",
-       "      <td>Slafkovský</td>\n",
-       "      <td>L</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8480018</th>\n",
-       "      <td>Nick</td>\n",
-       "      <td>Suzuki</td>\n",
-       "      <td>C</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8478851</th>\n",
-       "      <td>Alexandre</td>\n",
-       "      <td>Carrier</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8480865</th>\n",
-       "      <td>Noah</td>\n",
-       "      <td>Dobson</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8482087</th>\n",
-       "      <td>Kaiden</td>\n",
-       "      <td>Guhle</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8483457</th>\n",
-       "      <td>Lane</td>\n",
-       "      <td>Hutson</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8476875</th>\n",
-       "      <td>Mike</td>\n",
-       "      <td>Matheson</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8475233</th>\n",
-       "      <td>David</td>\n",
-       "      <td>Savard</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8481593</th>\n",
-       "      <td>Jayden</td>\n",
-       "      <td>Struble</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8482964</th>\n",
-       "      <td>Arber</td>\n",
-       "      <td>Xhekaj</td>\n",
-       "      <td>D</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8482487</th>\n",
-       "      <td>Jakub</td>\n",
-       "      <td>Dobes</td>\n",
-       "      <td>G</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8478470</th>\n",
-       "      <td>Sam</td>\n",
-       "      <td>Montembeault</td>\n",
-       "      <td>G</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         firstName      lastName positionCode team\n",
-       "id                                                \n",
-       "8476981       Josh      Anderson            R  MTL\n",
-       "8476469       Joel         Armia            R  MTL\n",
-       "8481540       Cole      Caufield            R  MTL\n",
-       "8481523      Kirby          Dach            C  MTL\n",
-       "8484984       Ivan       Demidov            R  MTL\n",
-       "8477989  Christian        Dvorak            C  MTL\n",
-       "8478133       Jake         Evans            C  MTL\n",
-       "8475848    Brendan     Gallagher            R  MTL\n",
-       "8479339     Patrik         Laine            R  MTL\n",
-       "8481618       Alex       Newhook            C  MTL\n",
-       "8479543    Michael      Pezzetta            L  MTL\n",
-       "8483515      Juraj    Slafkovský            L  MTL\n",
-       "8480018       Nick        Suzuki            C  MTL\n",
-       "8478851  Alexandre       Carrier            D  MTL\n",
-       "8480865       Noah        Dobson            D  MTL\n",
-       "8482087     Kaiden         Guhle            D  MTL\n",
-       "8483457       Lane        Hutson            D  MTL\n",
-       "8476875       Mike      Matheson            D  MTL\n",
-       "8475233      David        Savard            D  MTL\n",
-       "8481593     Jayden       Struble            D  MTL\n",
-       "8482964      Arber        Xhekaj            D  MTL\n",
-       "8482487      Jakub         Dobes            G  MTL\n",
-       "8478470        Sam  Montembeault            G  MTL"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_habs = stats.fetch_roster(\"MTL\")\n",
-    "df_habs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "a5d78d6f-49f8-473b-b946-a86f408997e5",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1066,7 @@
        "2024020793  2025-01-27T01:00:00Z      VGK      FLA"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8ea7d563-aa22-4c8e-a8ce-716cf98e2a3d",
    "metadata": {},
    "outputs": [
@@ -1521,7 +1296,7 @@
        "[102 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1529,6 +1304,210 @@
    "source": [
     "df_goalies = data[\"df_goalies\"]\n",
     "df_goalies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "144a348c-fe6e-4245-9aed-9a872caa6b89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fantasy_team</th>\n",
+       "      <th>manager</th>\n",
+       "      <th>fantasy_team_id</th>\n",
+       "      <th>FullName</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>team</th>\n",
+       "      <th>player_id_yahoo</th>\n",
+       "      <th>position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Filet O’McTavish</td>\n",
+       "      <td>Henry</td>\n",
+       "      <td>453.l.21077.t.1</td>\n",
+       "      <td>John Carlson</td>\n",
+       "      <td>Carlson</td>\n",
+       "      <td>WSH</td>\n",
+       "      <td>4503</td>\n",
+       "      <td>{'position': ['D', 'Util']}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Filet O’McTavish</td>\n",
+       "      <td>Henry</td>\n",
+       "      <td>453.l.21077.t.1</td>\n",
+       "      <td>Evander Kane</td>\n",
+       "      <td>Kane</td>\n",
+       "      <td>VAN</td>\n",
+       "      <td>4684</td>\n",
+       "      <td>{'position': ['LW', 'Util']}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Filet O’McTavish</td>\n",
+       "      <td>Henry</td>\n",
+       "      <td>453.l.21077.t.1</td>\n",
+       "      <td>Radko Gudas</td>\n",
+       "      <td>Gudas</td>\n",
+       "      <td>ANA</td>\n",
+       "      <td>5039</td>\n",
+       "      <td>{'position': ['D', 'Util']}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Filet O’McTavish</td>\n",
+       "      <td>Henry</td>\n",
+       "      <td>453.l.21077.t.1</td>\n",
+       "      <td>Frederik Andersen</td>\n",
+       "      <td>Andersen</td>\n",
+       "      <td>CAR</td>\n",
+       "      <td>5161</td>\n",
+       "      <td>{'position': 'G'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Filet O’McTavish</td>\n",
+       "      <td>Henry</td>\n",
+       "      <td>453.l.21077.t.1</td>\n",
+       "      <td>Darcy Kuemper</td>\n",
+       "      <td>Kuemper</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>5336</td>\n",
+       "      <td>{'position': 'G'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>Bustin' Hyman</td>\n",
+       "      <td>Philip</td>\n",
+       "      <td>453.l.21077.t.8</td>\n",
+       "      <td>Pavel Dorofeyev</td>\n",
+       "      <td>Dorofeyev</td>\n",
+       "      <td>VGK</td>\n",
+       "      <td>8357</td>\n",
+       "      <td>{'position': ['LW', 'RW', 'Util']}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>Bustin' Hyman</td>\n",
+       "      <td>Philip</td>\n",
+       "      <td>453.l.21077.t.8</td>\n",
+       "      <td>Aliaksei Protas</td>\n",
+       "      <td>Protas</td>\n",
+       "      <td>WSH</td>\n",
+       "      <td>8369</td>\n",
+       "      <td>{'position': ['C', 'LW', 'Util']}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>Bustin' Hyman</td>\n",
+       "      <td>Philip</td>\n",
+       "      <td>453.l.21077.t.8</td>\n",
+       "      <td>Quinton Byfield</td>\n",
+       "      <td>Byfield</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>8642</td>\n",
+       "      <td>{'position': ['C', 'LW', 'RW', 'Util']}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>Bustin' Hyman</td>\n",
+       "      <td>Philip</td>\n",
+       "      <td>453.l.21077.t.8</td>\n",
+       "      <td>Dylan Guenther</td>\n",
+       "      <td>Guenther</td>\n",
+       "      <td>UTA</td>\n",
+       "      <td>8885</td>\n",
+       "      <td>{'position': ['RW', 'Util', 'IR+']}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>Bustin' Hyman</td>\n",
+       "      <td>Philip</td>\n",
+       "      <td>453.l.21077.t.8</td>\n",
+       "      <td>Matthew Knies</td>\n",
+       "      <td>Knies</td>\n",
+       "      <td>TOR</td>\n",
+       "      <td>30227</td>\n",
+       "      <td>{'position': ['LW', 'Util']}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>262 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         fantasy_team manager  fantasy_team_id           FullName   lastName  \\\n",
+       "0    Filet O’McTavish   Henry  453.l.21077.t.1       John Carlson    Carlson   \n",
+       "1    Filet O’McTavish   Henry  453.l.21077.t.1       Evander Kane       Kane   \n",
+       "2    Filet O’McTavish   Henry  453.l.21077.t.1        Radko Gudas      Gudas   \n",
+       "3    Filet O’McTavish   Henry  453.l.21077.t.1  Frederik Andersen   Andersen   \n",
+       "4    Filet O’McTavish   Henry  453.l.21077.t.1      Darcy Kuemper    Kuemper   \n",
+       "..                ...     ...              ...                ...        ...   \n",
+       "257     Bustin' Hyman  Philip  453.l.21077.t.8    Pavel Dorofeyev  Dorofeyev   \n",
+       "258     Bustin' Hyman  Philip  453.l.21077.t.8    Aliaksei Protas     Protas   \n",
+       "259     Bustin' Hyman  Philip  453.l.21077.t.8    Quinton Byfield    Byfield   \n",
+       "260     Bustin' Hyman  Philip  453.l.21077.t.8     Dylan Guenther   Guenther   \n",
+       "261     Bustin' Hyman  Philip  453.l.21077.t.8      Matthew Knies      Knies   \n",
+       "\n",
+       "    team  player_id_yahoo                                 position  \n",
+       "0    WSH             4503              {'position': ['D', 'Util']}  \n",
+       "1    VAN             4684             {'position': ['LW', 'Util']}  \n",
+       "2    ANA             5039              {'position': ['D', 'Util']}  \n",
+       "3    CAR             5161                        {'position': 'G'}  \n",
+       "4     LA             5336                        {'position': 'G'}  \n",
+       "..   ...              ...                                      ...  \n",
+       "257  VGK             8357       {'position': ['LW', 'RW', 'Util']}  \n",
+       "258  WSH             8369        {'position': ['C', 'LW', 'Util']}  \n",
+       "259   LA             8642  {'position': ['C', 'LW', 'RW', 'Util']}  \n",
+       "260  UTA             8885      {'position': ['RW', 'Util', 'IR+']}  \n",
+       "261  TOR            30227             {'position': ['LW', 'Util']}  \n",
+       "\n",
+       "[262 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_fantasy_rosters = data[\"df_fantasy_rosters\"]\n",
+    "df_fantasy_rosters"
    ]
   }
  ],
