--- a/main.ipynb
+++ b/main.ipynb
@@ -13,16 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a64b4315-2d41-45c5-9d54-1121084ef98e",
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.fantasyhelper import stats\n",
     "import jupyter_black\n",
-    "from nhlpy.nhl_client import NHLClient\n",
-    "\n",
-    "client = NHLClient()\n",
     "\n",
     "jupyter_black.load()"
    ]
@@ -32,7 +29,17 @@
    "execution_count": null,
    "id": "44e7002a-e622-4b26-a439-bf13eceea7bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching NHL roster data...\n",
+      "Fetching NHL schedule data...\n",
+      "Fetching NHL skater stats...\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    data = stats.load_data(\"nhl_data.h5\")\n",
@@ -130,7 +137,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
