Updated for 2025-2026 season

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,6 +20,7 @@
    "source": [
     "from fantasyhelper import stats\n",
     "import jupyter_black\n",
+    "import pandas as pd\n",
     "\n",
     "\n",
     "jupyter_black.load()"
@@ -35,7 +36,7 @@
     "try:\n",
     "    data = stats.load_data(\"nhl_data.h5\")\n",
     "except FileNotFoundError:\n",
-    "    stats.update_data(\"nhl_data.h5\", date=\"2025-01-20\")\n",
+    "    stats.update_data(\"nhl_data.h5\")\n",
     "    data = stats.load_data(\"nhl_data.h5\")"
    ]
   },
@@ -91,7 +92,38 @@
    "outputs": [],
    "source": [
     "df_fantasy_rosters = data[\"df_fantasy_rosters\"]\n",
-    "df_fantasy_rosters.head()"
+    "teams = df_fantasy_rosters[\"fantasy_team\"].unique()\n",
+    "teams\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f178a8fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Slaf = df_fantasy_rosters[\n",
+    "    df_fantasy_rosters[\"fantasy_team\"] == \"Slaffing From The Throne\"\n",
+    "]\n",
+    "Slaf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85e3fe2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.merge(\n",
+    "    df_fantasy_rosters, df_skaters, on=\"FullName\", how=\"left\", suffixes=(\"\", \"_drop\")\n",
+    ")\n",
+    "df = df.loc[:, ~df.columns.str.endswith(\"_drop\")]\n",
+    "df = pd.merge(df, df_goalies, on=\"FullName\", how=\"left\", suffixes=(\"\", \"_drop\"))\n",
+    "df = df.loc[:, ~df.columns.str.endswith(\"_drop\")]\n",
+    "\n",
+    "df"
    ]
   },
   {
@@ -103,6 +135,14 @@
    "source": [
     "df_week[\"awayTeam\"].value_counts() + df_week[\"homeTeam\"].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f9c9af2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
