Removed accents from names

--- a/main.ipynb
+++ b/main.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "df_fantasy_rosters = data[\"df_fantasy_rosters\"]\n",
     "teams = df_fantasy_rosters[\"fantasy_team\"].unique()\n",
-    "teams\n"
+    "teams"
    ]
   },
   {
